# spotify_pro

./: .env.sample  .gitignore  README.md  angular.json  package.json  pnpm-lock.yaml  tsconfig.json
src/: env.d.ts  index.html  main.ts  style.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src-tauri/src/patch_window/: macos.rs
src/app/: app-routing.module.ts  app.component.ts  app.module.ts
src/app/modules/auth/: auth.module.ts
src/app/modules/auth/pages/login/: login.component.css  login.component.html  login.component.ts
src/app/modules/shared/: shared.module.ts
src/app/modules/shared/components/avatar/: avatar.component.css  avatar.component.html  avatar.component.ts
src/app/modules/shared/components/button/: button.component.css  button.component.html  button.component.ts
src/app/modules/shared/components/icon/: icon.component.css  icon.component.html  icon.component.ts
src/app/modules/shared/components/resizable/: resizable.component.css  resizable.component.html  resizable.component.ts
src/app/modules/shared/guards/: auth.guard.ts
src/app/modules/shared/services/: spotify-api.service.ts  spotify-auth.service.ts  storage.service.ts
src/app/modules/shared/types/: auth.ts
src/app/modules/spotify/: spotify-routing.module.ts  spotify.module.ts
src/app/modules/spotify/controllers/: player.controller.ts  playlist.controller.ts  user.controller.ts
src/app/modules/spotify/interceptors/: spotify-auth.interceptor.ts
src/environments/: environment.prod.ts  environment.ts
(+25 files in other folders)
